Fixed spacing for the lsides and top/bottom

--- a/assets/css/slider-def.css
+++ b/assets/css/slider-def.css
@@ -286,14 +286,19 @@
     margin-left:30px;
   }
 }
-@media screen and (min-width:768px) {
+@media screen and (min-width:475px) {
   #slider {
     height: 500px;
   }
 }
+@media screen and (min-width:768px) {
+  #slider {
+    height: 700px;
+  }
+}
 @media screen and (min-width: 900px) {
   #slider {
-    height: 80vh;
+    height: 86vh;
   }
   .switch{
     width:45px;
