--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 body {
 	line-height: 1;
   padding: 30px 0px 0;
-  height:100vh;
+  height:auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -405,8 +405,11 @@ header .social {
 }
 
 @media screen and (min-width:768px) {
+  body {
+    height: 100vh;
+  }
   .hero__right {
-    height: 500px;
+    height: 700px;
   }
 }
 
@@ -462,7 +465,7 @@ header .social {
     color: #333;
   }
   .hero {
-    height: 80vh;
+    height: calc(100vh - 140px);
   }
   .hero img {
     width: 100%;
